# pyEzvizApi

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  codeql.yml  dependency-review.yml  manual-release.yml  prepare-release.yml  python-publish.yml  release-check.yml  repo-watch.yml
config/: repo-watch.json
docs/: home-assistant-contract.md  repo-watch-agent.md
examples/: mqtt_listener.py  rtsp_auth_test.py
pyezvizapi/: __init__.py  __main__.py  api_endpoints.py  camera.py  cas.py  client.py  client_protocol.py  cloud_stream.py  constants.py  detector.py  device_factory.py  feature.py  hcnetsdk.py  light_bulb.py  local_stream.py  local_stream_ecdh.py  mqtt.py  smart_plug.py  stream.py  test_cam_rtsp.py  test_mqtt.py  utils.py
tests/: cli_fakes.py  test_alarm_parsing.py  test_apk_re_sidecars.py  test_auth.py  test_camera_control.py  test_camera_status.py  test_cas.py  test_cli.py  test_client_parsing.py  test_feature.py  test_floodlight_brightness.py  test_hcnetsdk.py  test_hcnetsdk_command_live_check.py  test_http_helpers.py  test_light_plug_status.py  test_local_sdk_live_check.py  test_local_stream.py  test_local_stream_ecdh.py  test_models.py  test_mqtt.py  test_mqtt_demo.py  test_package_exports.py  test_pagelist.py  test_retrofit_endpoint_extractor.py  test_rtsp_auth.py  test_stream.py  test_utils.py
tests/fixtures/: page_list_response.json  terminal_info_response.json
tools/: repo_watch.py
tools/apk-re/: Dockerfile  README.md  apk-re-build  apk-re-decompile  apk-re-shell
tools/apk-re/frida/: analyze-stream-dumps  check-ezviz-frida-target  compare-idmx-dumps  ezviz-cas-operation-code-oracle.js  ezviz-cas-operation-code-wire-capture.js  ezviz-cas-tuple-extract.js  ezviz-hcnetsdk-command-shape-capture.js  ezviz-hcnetsdk-lan-capture.js  ezviz-hcnetsdk-media-capture.js  ezviz-lan-settings-capture.js  ezviz-open-lan-device-list.js  ezviz-stream-broad-capture.js  ezviz-stream-transform-hook.js  ezviz-trace-cloud-socket-download.js  ezviz-transform-cloud-download.js  ezviz-trigger-cloud-download.js  ezviz-trigger-target-lan-login.js  pull-ezviz-hook-dumps  run-ezviz-hcnetsdk-command-shape-hook  run-ezviz-lan-settings-hook  run-ezviz-stream-hook
tools/apk-re/sidecars/: DvrConfigProbe.java  README.md
tools/apk-re/sidecars/smali/: DvrConfigProbe.smali
