[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyezvizapi"
version = "1.0.4.8"
description = "EZVIZ API client for Home Assistant and CLI"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
  { name = "Renier Moorcroft", email = "RenierM26@users.github.com" }
]
keywords = ["ezviz", "home-assistant", "camera", "mqtt", "iot", "cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "requests",
  "xmltodict",
  "pycryptodome",
  "paho-mqtt"
]

[project.urls]
Homepage = "https://github.com/RenierM26/pyEzvizApi/"
Repository = "https://github.com/RenierM26/pyEzvizApi/"
Documentation = "https://github.com/RenierM26/pyEzvizApi/tree/main/docs"
Changelog = "https://github.com/RenierM26/pyEzvizApi/blob/main/CHANGELOG.md"
Issues = "https://github.com/RenierM26/pyEzvizApi/issues"

[project.scripts]
pyezvizapi = "pyezvizapi.__main__:main"

[project.optional-dependencies]
dev = ["build", "codespell", "mypy", "pip-audit", "pyright", "pytest", "pytest-cov", "ruff", "twine", "types-requests"]

[tool.setuptools.packages.find]
include = ["pyezvizapi*"]

[tool.setuptools.package-data]
pyezvizapi = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["pyezvizapi"]

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","PL","RUF","SLF"]
ignore = ["E501"] # long URLs ok

# Per-file tuning
[tool.ruff.lint.per-file-ignores]
# CLI files are naturally branchy/return-heavy; quiet those here:
"pyezvizapi/__main__.py" = ["PLR0911","PLR0912","PLR0915"]
# Re-export noise in __init__ (if applicable):
"pyezvizapi/__init__.py" = ["F401"]
# Compatibility helper modules may intentionally expose legacy names.
"pyezvizapi/test_*.py" = ["SLF001"]
"tests/test_mqtt.py" = ["SLF001"]
"tests/test_pagelist.py" = ["SLF001"]
"tests/test_http_helpers.py" = ["SLF001"]
"tests/test_mqtt_demo.py" = ["SLF001"]
"tests/test_auth.py" = ["SLF001"]
"tests/test_client_parsing.py" = ["SLF001"]
"tests/test_alarm_parsing.py" = ["SLF001"]
"pyezvizapi/cloud_stream.py" = ["SLF001"]

# Import sorting to match HA expectations
[tool.ruff.lint.isort]
known-first-party = ["pyezvizapi"]
known-third-party = ["homeassistant", "aiohttp", "voluptuous", "yarl", "xmltodict", "Crypto"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true
force-sort-within-sections = true

# Pylint-like thresholds (only if you prefer global relaxation instead of per-file ignores)
[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str"]
max-args = 10

[tool.mypy]
python_version = "3.12"
files = ["pyezvizapi"]
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_no_return = true
no_implicit_optional = true
check_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.codespell]
ignore-words-list = "adss,aliase,anull,enull,hass,hassio,hybernate"
skip = "*.egg-info,build,dist"

[tool.coverage.run]
source = ["pyezvizapi"]


[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true
exclude_also = [
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.",
]
